config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: datum-net
    app.kubernetes.io/name: datum-net
    app.kubernetes.io/version: 1.0.0
  name: datum-net
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: datum-net
      app.kubernetes.io/name: datum-net
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: datum-net
        app.kubernetes.io/name: datum-net
    spec:
      containers:
        - name: datum-net
          image: ghcr.io/datum-cloud/datum-net:latest

          imagePullPolicy: Always
          ports:
            - containerPort: 4321
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              path: /livez
              port: 4321
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            httpGet:
              path: /readyz
              port: 4321
              scheme: HTTP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
