config/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: datum-net
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
