config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: datum-net
    app.kubernetes.io/name: datum-net
    app.kubernetes.io/version: 1.0.0
  name: datum-net
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 4321
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: datum-net
    app.kubernetes.io/name: datum-net
  sessionAffinity: None
  type: ClusterIP
