config/base/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: datum-net
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: datum-net
  tcpKeepalive:
    idleTime: 60s
    interval: 15s
    probes: 3
